tests/ui/const-generics/mgca/unbraced_const_block_const_arg_gated.stderr
error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:7:27
   |
LL |     const PARAM_TY: Inner<const { 1 }>,
   |                           ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:9:28
   |
LL |     const DEFAULT: usize = const { 1 },
   |                            ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:14:23
   |
LL | type NormalTy = Inner<const { 1 }>;
   |                       ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:22:18
   |
LL |     let _: Inner<const { 1 }>;
   |                  ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:28:19
   |
LL |         generic::<const { 1 }>();
   |                   ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unbraced const blocks as const args are experimental
  --> $DIR/unbraced_const_block_const_arg_gated.rs:37:27
   |
LL | const TYPE_CONST: usize = const { 1 };
   |                           ^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[type_const]` attribute is an experimental feature
  --> $DIR/unbraced_const_block_const_arg_gated.rs:35:1
   |
LL | #[type_const]
   | ^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
